--- a/index.html
+++ b/index.html
@@ -1,206 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #87CEEB;
-        }
-        #gameCanvas {
-            border: 2px solid #000;
-        }
-    </style>
-</head>
-<body>
-    <canvas id="gameCanvas" width="400" height="600"></canvas>
-    <script>
-        const canvas = document.getElementById('gameCanvas');
-        const ctx = canvas.getContext('2d');
-
-        // Audio context
-        const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-
-        // Bird
-        const bird = {
-            x: 50,
-            y: 300,
-            size: 30,
-            velocity: 0,
-            gravity: 0.3,
-            jump: -6,
-            rotation: 0
-        };
-
-        // Pipes
-        const pipes = [];
-        const pipeWidth = 50;
-        const pipeGap = 150;
-
-        let score = 0;
-        let gameOver = false;
-
-        // Background
-        const background = new Image();
-        background.src = 'background.png';
-
-        // Clouds
-        const clouds = [
-            { x: 50, y: 50 },
-            { x: 200, y: 100 },
-            { x: 350, y: 75 }
-        ];
-
-        function drawBackground() {
-            ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
-            
-            // Draw clouds
-            ctx.fillStyle = 'rgba(255, 255, 255, 0.7)';
-            clouds.forEach(cloud => {
-                ctx.beginPath();
-                ctx.arc(cloud.x, cloud.y, 20, 0, Math.PI * 2);
-                ctx.arc(cloud.x + 15, cloud.y - 10, 15, 0, Math.PI * 2);
-                ctx.arc(cloud.x + 30, cloud.y, 20, 0, Math.PI * 2);
-                ctx.fill();
-            });
-        }
-
-        function drawBird() {
-            ctx.save();
-            ctx.translate(bird.x, bird.y);
-            ctx.rotate(bird.rotation);
-            ctx.font = `${bird.size}px Arial`;
-            ctx.fillText('🐦', -bird.size/2, bird.size/2);
-            ctx.restore();
-        }
-
-        function drawPipes() {
-            pipes.forEach(pipe => {
-                ctx.fillStyle = 'green';
-                ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
-                ctx.fillRect(pipe.x, pipe.bottom, pipeWidth, canvas.height - pipe.bottom);
-            });
-        }
-
-        function drawScore() {
-            ctx.fillStyle = 'black';
-            ctx.font = '24px Arial';
-            ctx.fillText(`Score: ${score}`, 10, 30);
-        }
-
-        function playSound(frequency, duration) {
-            const oscillator = audioContext.createOscillator();
-            const gainNode = audioContext.createGain();
-
-            oscillator.type = 'sine';
-            oscillator.frequency.setValueAtTime(frequency, audioContext.currentTime);
-            oscillator.connect(gainNode);
-            gainNode.connect(audioContext.destination);
-
-            gainNode.gain.setValueAtTime(0.1, audioContext.currentTime);
-            gainNode.gain.exponentialRampToValueAtTime(0.01, audioContext.currentTime + duration);
-
-            oscillator.start(audioContext.currentTime);
-            oscillator.stop(audioContext.currentTime + duration);
-        }
-
-        function update() {
-            if (gameOver) return;
-
-            bird.velocity += bird.gravity;
-            bird.y += bird.velocity;
-
-            // Update bird rotation
-            if (bird.velocity < 0) {
-                bird.rotation = Math.max(-Math.PI / 4, bird.rotation - 0.1);
-            } else {
-                bird.rotation = Math.min(Math.PI / 2, bird.rotation + 0.05);
-            }
-
-            if (bird.y + bird.size > canvas.height) {
-                gameOver = true;
-                playSound(200, 0.5); // Game over sound
-            }
-
-            pipes.forEach(pipe => {
-                pipe.x -= 2;
-
-                if (pipe.x + pipeWidth < 0) {
-                    pipes.shift();
-                    score++;
-                    playSound(500, 0.1); // Score sound
-                }
-
-                if (
-                    bird.x + bird.size/2 > pipe.x &&
-                    bird.x - bird.size/2 < pipe.x + pipeWidth &&
-                    (bird.y - bird.size/2 < pipe.top || bird.y + bird.size/2 > pipe.bottom)
-                ) {
-                    gameOver = true;
-                    playSound(200, 0.5); // Game over sound
-                }
-            });
-
-            if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width - 200) {
-                const pipeY = Math.floor(Math.random() * (canvas.height - pipeGap - 100)) + 50;
-                pipes.push({
-                    x: canvas.width,
-                    top: pipeY,
-                    bottom: pipeY + pipeGap
-                });
-            }
-
-            // Move clouds
-            clouds.forEach(cloud => {
-                cloud.x -= 0.5;
-                if (cloud.x < -50) cloud.x = canvas.width + 50;
-            });
-        }
-
-        function draw() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawBackground();
-            drawPipes();
-            drawBird();
-            drawScore();
-
-            if (gameOver) {
-                ctx.fillStyle = 'rgba(0, 0, 0, 0.5)';
-                ctx.fillRect(0, 0, canvas.width, canvas.height);
-                ctx.fillStyle = 'white';
-                ctx.font = '48px Arial';
-                ctx.fillText('Game Over', canvas.width / 2 - 100, canvas.height / 2);
-            }
-        }
-
-        function gameLoop() {
-            update();
-            draw();
-            requestAnimationFrame(gameLoop);
-        }
-
-        canvas.addEventListener('click', () => {
-            if (gameOver) {
-                bird.y = 300;
-                bird.velocity = 0;
-                bird.rotation = 0;
-                pipes.length = 0;
-                score = 0;
-                gameOver = false;
-            } else {
-                bird.velocity = bird.jump;
-                playSound(400, 0.1); // Jump sound
-            }
-        });
-
-        gameLoop();
-    </script>
-</body>
-</html>
-
+23f1000774@ds.study.iitm.ac.in
